# multimedia

./: Cargo.toml  README.adoc  README.md  save.json
src/: cli.rs  interface.rs  lib.rs  main.rs  musicfile.rs  scan.rs  search.rs  tag.rs  tests.rs  write2md.rs  writeplaylist.rs
src/md/: test1.md
src/playlist/: test1.m3u
src/test_md/: testmd1.md
src/test_playlist/: testplay.m3u
